--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,42 @@
     <string name="unlock_button">Odblokuj</string>
     <string name="error_password_incorrect">Nieprawidłowe hasło.</string>
     <string name="error_password_too_short">Hasło musi mieć co najmniej 4 znaki.</string>
+    <string name="entry_title">Tytuł</string>
+    <string name="entry_content">Treść</string>
+    <string name="entry_add_photo">Dodaj zdjęcie</string>
+    <string name="entry_audio_record">Nagranie głosowe</string>
+    <string name="audio_recorder_permission_needed">Wymagane uprawnienie do mikrofonu</string>
+    <string name="audio_recorder_give_permission">Udziel uprawnienia</string>
+    <string name="audio_recorder_start_recording">Rozpocznij nagrywanie</string>
+    <string name="audio_recording_stop_recording">Zatrzymaj nagrywanie</string>
+    <string name="resume">Wznów</string>
+    <string name="pause">Pauzuj</string>
+    <string name="audio_recording_decline">Odrzuć nagranie</string>
+    <string name="audio_recording_save">Zapisz nagranie</string>
+    <string name="audo_recording_paused">Nagrywanie wstrzymane</string>
+    <string name="audio_recording_in_progress">Nagrywanie...</string>
+    <string name="entry_last_edit">Ostatnia edycja: %1$s</string>
+    <string name="entry_created">Utworzono: %1$s</string>
+    <string name="entry_detail_content">Treść</string>
+    <string name="entry_detail_loc">Lokalizacja</string>
+    <string name="entry_detail_photo">Zdjęcie</string>
+    <string name="entry_detail_photo_content">Zdjęcie z wpisu</string>
+    <string name="entry_detail_recording">Nagranie głosowe</string>
+    <string name="entry_detail_back">Wstecz</string>
+    <string name="entry_detail_edit">Edytuj</string>
+    <string name="entry_card_photo">Zdjęcie</string>
+    <string name="entry_card_audio">Audio</string>
+    <string name="entry_card_loc">Lokalizacja</string>
+    <string name="entry_card_edit">Edytuj</string>
+    <string name="diary_title">Mój Dziennik</string>
+    <string name="diary_map">Mapa</string>
+    <string name="diary_add_entry">Dodaj wpis</string>
+    <string name="map_entries">Mapa wpisów</string>
+    <string name="map_back">Wstecz</string>
+    <string name="edit_entry_save">Zapisz</string>
+    <string name="new_entry">Nowy wpis</string>
+    <string name="edit_entry">Edytuj wpis</string>
+    <string name="entry_back">Wstecz</string>
+    <string name="lokalizacja">Lokalizacja</string>
+    <string name="location_get_loc">Pobierz lokalizację</string>
 </resources>
